shop/static/shop/css/shop.css
/* General styles */
article {
    margin-top: 8.5rem !important;
    padding: 0 1.2rem;
}

/* Search bar styles */
.search-bar {
    margin: auto;
}

.search-bar input {
    padding: 5px;
}

/* Buttons */
.search-button {
    margin: 0 0 0 5px;
    padding: 6px 12px;
}

.read-more-btn {
    cursor: pointer;
    color: #403e3e;;
    border: none;
    background: none;
    font-weight: bold;
    padding: 0;
}

.read-more-btn:hover {
    text-decoration: underline;
}

#backToTop {
    position: fixed;
    bottom: 20px;
    right: 20px;
    padding: 5px 10px;
    background-color: #403e3e;
    color: #fff;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    opacity: 0;
    visibility: hidden;
    transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
}

#backToGallery {
    position: fixed;
    bottom: 20px;
    left: 20px;
    padding: 5px 10px;
    background-color: #403e3e;
    color: #fff;
    border-radius: 5px;
    cursor: pointer;
    text-decoration: none;
    opacity: 0;
    visibility: hidden;
    transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
}

/* Card styles */
.card {
    position: relative;
    display: flex;
    flex-direction: column;
    border: 8px solid #000;
    overflow: hidden;
    gap: 10px;
    padding: 2px 2px 20px 2px;
    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
    transition: min-height 0.3s ease-in-out;
}

h1 {
    margin: 2rem auto 2rem;
}

.card-img {
    object-fit: cover;
    height: 30vh;
    padding: 5px;
}

h3.card-title {
    margin: 20px auto 15px;
}

.card-body {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.card-text {
    overflow: hidden;
    transition: max-height 0.3s ease-in-out;
}

/* Images_by_Theme page styles */
.gallery-background {
    background-image: url('../images/gallery_background_2.jpg');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    min-height: 80vh;

}

h1.heading {
    margin-top: 11rem;
    text-shadow: 0 0 5px #fff,
                 0 0 10px #0ff,
                 0 0 20px #0ff,
                 0 0 40px #0ff;
}

.image-card {
    position: relative;
    display: flex;
    flex-direction: column;
    background-color: #ddd;
    border: 8px solid #000;
    overflow: hidden;
    gap: 10px;
    margin: 13px;
    padding: 2px 2px 20px 2px;
    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
    transition: min-height 0.3s ease-in-out;
}

.image-card img {
    height: 50vh;
    width: 100%;
    padding: 5px;
}

/* licenses */
.image-card .license-tags {
    display: flex;
    flex-wrap: wrap;
    gap: 5px;
    margin: 0 auto;
}

.image-card .license-tag {
    background-color: #7c7575;
    color: #fff;
    padding: 3px 8px;
    border-radius: 4px;
    font-size: 0.7rem;
}

/* Contact form styles */
.contact-form-container {
    height: 80vh;
    max-width: 600px;
    margin: 8.75rem auto;
    padding: 2rem 1rem;
    overflow: scroll;
}

.contact-form-container h1 {
    font-size: 2rem;
    text-align: center;
    margin-bottom: 2rem;
}

.contact-form-container label {
    font-weight: 500;
    margin-top: 1rem;
    display: block;
}

.contact-form-container input,
.contact-form-container textarea {
    width: 100%;
    padding: 0.6rem;
    border: 1px solid #ccc;
    border-radius: 4px;
    margin-top: 0.5rem;
    font-family: 'Montserrat', sans-serif;
    font-size: 1rem;
    box-sizing: border-box;
}

.contact-form-container textarea {
    min-height: 200px;
    resize: vertical;
}

.contact-form-container.btn-custom:hover {
    background-color: #333;
}

.contact-logo-wrapper {
    display: flex;
    justify-content: center;
}

.contact-logo-img {
    width: 50%;
    max-width: 400px;
}

/* Responsiveness Adjustement */
@media (min-width: 1024px) {

    .gallery-background {
        background-image: url('../images/gallery_background_xl_screens.jpg');
    }
    
    h1.heading {
        margin: 17rem auto 3rem;;
    }
}

